<resources>
    <string name="app_name">Partistico</string>
    <string name="title_activity_athlete_list">Atletas</string>
    <string name="title_activity_athlete_profile">"Atleta - Perfil"</string>
    <string name="action_settings">Settings</string>
    <string name="profile_personal_data_tab">Dados Pessoais</string>
    <string name="profile_notes_tab">Notas</string>
    <string name="profile_history_tab">Histórico</string>
    <string name="gender">Sexo</string>
    <string name="echelon">Escalão</string>
    <string name="role">Cargo</string>
    <string name="birthday_date">Data de Nascimento</string>
    <string name="medical_exam_validation_date">Validade do Exame Médico</string>
    <string name="lorem500">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae tempus tortor, eget feugiat magna. Vivamus convallis metus leo, ut pharetra libero tincidunt id. In non neque facilisis, vehicula ex in, porttitor tellus. Nulla pretium porta massa. Nullam vulputate dui vel dolor pellentesque imperdiet. Duis odio tellus, gravida eget sapien quis, finibus sollicitudin justo. Nulla tincidunt finibus varius. Integer commodo risus eget ex lacinia, efficitur ultrices felis vestibulum. Ut hendrerit suscipit mollis. Donec et eleifend purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi vestibulum risus ut massa tempus malesuada. Maecenas vitae rhoncus orci, in iaculis ligula. Quisque vel elementum magna.

        Donec tempor laoreet odio a molestie. Ut quis ligula turpis. Fusce eu finibus nulla. Ut non mattis nunc. Nullam imperdiet facilisis mollis. Duis hendrerit nibh ligula, vel porttitor tellus cursus eget. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non feugiat ipsum, a molestie elit. Proin libero lacus, congue sollicitudin pellentesque eget, accumsan vitae nisi. Cras rutrum risus dolor, nec accumsan augue egestas suscipit.

        Donec dictum porttitor arcu vel pulvinar. Sed tellus nisi, faucibus sed massa non, ultricies viverra sem. Vivamus vel semper eros, et venenatis nibh. Duis eu posuere nunc. Nulla vestibulum, ante ut malesuada venenatis, ligula urna ullamcorper tellus, ac efficitur tellus dolor sit amet nisl. Quisque sed sem ac ex fermentum vestibulum. Etiam justo diam, rutrum eu aliquam quis, accumsan pretium quam. Quisque non faucibus sapien. Phasellus blandit fringilla diam efficitur fermentum. Vivamus congue purus sed ultrices tincidunt. Nam et gravida diam. Praesent nec orci non ligula efficitur mollis.

        Nullam ipsum eros, placerat at tempus eget, laoreet id ex. Aliquam erat volutpat. Mauris tellus risus, auctor in blandit a, interdum in ex. Aenean egestas rhoncus nunc sed bibendum. Duis id cursus nulla. Suspendisse venenatis, odio ut interdum semper, leo lorem malesuada lacus, ut gravida odio sapien ac elit. Cras sed volutpat neque. Aenean pellentesque mauris at tortor vulputate dignissim. Etiam iaculis metus quis tortor eleifend malesuada. Maecenas elementum, lorem ac placerat rhoncus, tortor risus semper sem, a luctus sem nunc et tortor.

        Suspendisse quis sem et nulla efficitur tristique volutpat id arcu. Curabitur porttitor, eros a tempus commodo, dolor orci gravida odio, elementum elementum tellus risus vel eros. Nullam eget ante non libero viverra mattis. Duis vel libero mattis, consequat neque nec, volutpat justo. Donec porta, turpis vel fermentum convallis, sapien felis cursus tortor, et porta tortor lorem sit amet ante. Sed sit amet velit non odio sodales tincidunt quis vitae ipsum. Maecenas tortor sem, fermentum in neque ut, ullamcorper ullamcorper odio. Vivamus condimentum velit eget quam consequat, quis posuere libero eleifend. Suspendisse in arcu est. Vestibulum massa risus, efficitur ut magna varius, laoreet facilisis nibh. Ut sem dui, dignissim sit amet cursus nec, rhoncus vitae dui. Suspendisse sit amet lacus nec dui tincidunt pretium. Maecenas dapibus porttitor arcu vitae gravida.

        Duis eu blandit metus. Etiam eu placerat nisi, sed dapibus ligula. Curabitur sagittis turpis id erat ultricies rutrum. Morbi eu est bibendum, scelerisque tortor et, posuere lacus. In.
    </string>

    <string name="search_title"></string>
    <string name="search_hint">Insira o nome</string>
    <string name="title_actity_nonAthlete_list">Não Atletas</string>
    <string name="title_activity_non_athlete_profile">Não Atleta - Perfil</string>
    <string name="title_activity_competition_list">Provas</string>
    <string name="title_activity_competition_profile">Prova</string>
    <string name="title_activity_exercise_list">Exercícios</string>
    <string name="title_activity_exercise_profile">Exercício</string>
    <string name="title_activity_warm_up_list">Aquecimentos</string>
    <string name="title_activity_warm_up_profile">Aquecimento</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string name="dates">Data Início | Data Fim</string>
    <string name="echelons">Escalões</string>
    <string name="specializations">Especialidades</string>


    <string name="echelon1">Iniciação</string>
    <string name="echelon2">Benjamin</string>
    <string name="echelon3">Infantil</string>
    <string name="echelon4">Iniciado</string>
    <string name="echelon5">Cadete</string>
    <string name="echelon6">Juvenil</string>
    <string name="echelon7">Júnior</string>
    <string name="echelon8">Sénior</string>

    <string name="specialization1">Pares de Dança</string>
    <string name="specialization2">Figuras Obrigatórias</string>
    <string name="specialization3">Show e Precisão</string>
    <string name="specialization4">Patinagem Livre</string>
    <string name="specialization5">Pares Artísticos</string>
    <string name="specialization6">Solo Dance</string>


    <string name="competition_general_tab">Geral</string>
    <string name="competition_information_tab">Informações</string>
    <string name="competition_localization_tab">Localização</string>

    <string name="test">TESTE</string>

    <string name="welcome">Bem-vindo ao Partistico</string>
    <string name="title_activity_competition_profile_localization_fragment">Mapa</string>
    <string name="create_warmup_title">Criar Aquecimento</string>
    <string name="create_warmup_exercise_title">Criar Exercício</string>
    <string name="edit_warmup_title">Editar Aquecimento</string>
    <string name="edit_warmup_exercise_title">Editar Exercício</string>
    <string name="delete_warmup_title">Eliminar Aquecimento</string>
    <string name="delete_warmup_message">Tem a certeza que pretende eliminar o aquecimento?</string>
    <string name="delete_warmup_exercise_title">Eliminar Exercício</string>
    <string name="delete_warmup_exercise_message">Tem a certeza que pretende eliminar o exercício?</string>
    <string name="reject">Rejeitar</string>
    <string name="accept">Aceitar</string>


    <string name="btn_atheletes">Atletas</string>
    <string name="btn_non_atheletes">Não Atletas</string>
    <string name="btn_competition">Provas</string>
    <string name="btn_contents">Conteúdos</string>
    <string name="btn_exercises">Exercícios</string>
    <string name="btn_warm_ups">Aquecimentos</string>
    <string name="btn_exit">Sair</string>

</resources>
