<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CompetitionActivities.CompetitionProfileGeneralData">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <TextView
            android:id="@+id/lbl_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dates"
            android:textColor="@color/labelColor"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="15dp" />

        <TextView
            android:id="@+id/tv_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="43dp" />

        <ImageView
            android:id="@+id/bar1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/labelColor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <TextView
            android:id="@+id/lbl_echelons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/echelons"
            android:textColor="@color/labelColor"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>

        <ImageView
            android:id="@+id/bar2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/labelColor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <TextView
            android:id="@+id/lbl_specializations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specializations"
            android:textColor="@color/labelColor"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>

        <ImageView
            android:id="@+id/bar3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/labelColor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>