<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NonAthleteActivities.NonAthleteProfilePersonalDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <TextView
            android:id="@+id/lbl__nonAthlete_birtday_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_date"
            android:textColor="@color/labelColor"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="15dp" />

        <TextView
            android:id="@+id/tv_nonAthlete_birdthay_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Aqui leva a data"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="43dp" />

        <ImageView
            android:id="@+id/bar1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/labelColor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <TextView
            android:id="@+id/lbl_nonAthlete_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/labelColor"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="15dp" />

        <TextView
            android:id="@+id/tv_nonAthlete_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Aqui leva o sexo"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="43dp" />

        <ImageView
            android:id="@+id/bar2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/labelColor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <TextView
            android:id="@+id/lbl_nonAthlete_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/echelon"
            android:textColor="@color/labelColor"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="15dp" />

        <TextView
            android:id="@+id/tv_nonAthlete_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Aqui leva o cargo"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="43dp" />

        <ImageView
            android:id="@+id/bar3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/labelColor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>